editing src video

--- a/style/less/style.less
+++ b/style/less/style.less
@@ -1318,6 +1318,9 @@ h4 {
   .test__gif {
     right: -59px;
   }
+  .header__poster {
+    right: -7%;
+  }
 }
 
 @media screen and (max-width: 1250px) {
