--- a/style/less/style.less
+++ b/style/less/style.less
@@ -353,10 +353,7 @@ h4 {
   width: 100%;
   transition: opacity 1s;
   opacity: 1;
-  & video{
-    width: 100%;
-    height: 100vh;
-  }
+
 
   &__animate {
     opacity: 0;
@@ -1320,6 +1317,10 @@ h4 {
   }
   .header__poster {
     right: -7%;
+  }
+  .preload video{
+    width: 100%;
+    height: 100vh;
   }
 }
 
