--- a/style/less/fifty.less
+++ b/style/less/fifty.less
@@ -91,9 +91,8 @@
   }
   &__master {
     position: relative;
-    margin-left: -6.3%;
     margin-top: -80px;
-    width: 64%;
+    width: 61%;
     &--image {
       width: 100%;
       display: block;
@@ -145,7 +144,8 @@
     }
   }
   &__inner {
-    margin-bottom: 60px;
+    width: 66%;
+    margin: 0 auto 60px;
     align-items: flex-start;
   }
   &__bridge {
@@ -599,6 +599,9 @@
   .fifty__energy {
     width: 74%;
   }
+  .fifty__inner {
+    width: 75%;
+  }
 }
 
 @media screen and (max-width: 1300px) {
@@ -616,6 +619,12 @@
     padding: 15px;
     width: 46%;
   }
+  .fifty__border {
+    width: 47%;
+  }
+  .fifty__master{
+    width: 53%;
+  }
 }
 
 @media screen and (max-width: 1200px) {
@@ -630,9 +639,8 @@
   }
 
   .fifty__master {
-    margin-left: -54px;
     margin-top: -49px;
-    width: 55%;
+    width: 48%;
   }
 
   .fifty__border {
@@ -728,7 +736,9 @@
   .fifty__text {
     width: 100%;
   }
-
+  .fifty__inner {
+    width: 86%;
+  }
   .fifty__energy {
     width: 90%;
   }
@@ -755,7 +765,6 @@
   }
 
   .fifty__master {
-    margin-left: -22px;
     margin-top: -33px;
     width: 49%;
   }
@@ -946,7 +955,6 @@
   }
 
   .fifty__master {
-    margin-left: 0;
     margin-top: -11px;
     width: 100%;
     margin-bottom: 60px;
@@ -954,7 +962,7 @@
 
   .fifty .fifty__inner {
     flex-direction: column;
-
+    width: 100%;
   }
 
   .fifty__master--info {
