editing  page and color

--- a/style/less/contemporary.less
+++ b/style/less/contemporary.less
@@ -19,7 +19,7 @@
       height: 29px;
       left: -10%;
       bottom: -29px;
-      background: #E16010;
+      background: #F08300;
     }
     &--name {
       font-family: "Rodchenko", sans-serif;
@@ -66,7 +66,7 @@
         height: 13px;
         left: 34%;
         bottom: -13px;
-        background: #E16010;
+        background: #F08300;
       }
     }
     &--info {
@@ -90,7 +90,7 @@
       height: 8px;
       right: 20%;
       top: 11px;
-      background: #E16010;
+      background: #F08300;
     }
     &:after {
       content: "";
@@ -99,7 +99,7 @@
       height: 10px;
       left: 46%;
       bottom: -41px;
-      background: #E16010;
+      background: #F08300;
     }
     &--info {
       position: absolute;
@@ -121,7 +121,7 @@
       height: 13px;
       left: 0;
       top: -13px;
-      background: #E16010;
+      background: #F08300;
     }
     &:after {
       content: "";
@@ -130,7 +130,7 @@
       height: 13px;
       right: 20px;
       bottom: -26px;
-      background: #E16010;
+      background: #F08300;
     }
     &--image {
       position: relative;
@@ -148,7 +148,7 @@
     }
     &--info {
       position: absolute;
-      background: #E16010;
+      background: #F08300;
       padding: 14px 37px;
       bottom: 17%;
       left: 0;
@@ -193,7 +193,7 @@
         height: 395px;
         left: -23px;
         top: 0;
-        background: #E16010;
+        background:#F08300;
       }
     }
     &--wrap {
@@ -230,7 +230,7 @@
       position: absolute;
       right: -1%;
       top: 6%;
-      background: #E16010;
+      background: #F08300;
     }
     &--image {
       position: relative;
@@ -255,7 +255,7 @@
       height: 160px;
       right: 24%;
       top: -14%;
-      background: #E16010;
+      background: #F08300;
     }
     &:after {
       content: "";
@@ -281,7 +281,7 @@
         height: 14px;
         left: 51px;
         top: 0;
-        background: #E16010;
+        background: #F08300;
       }
       &::after {
         content: "";
@@ -352,7 +352,7 @@
       left: 0;
       padding: 14px 14px 14px 30px;
       box-sizing: border-box;
-      background: #E16010;
+      background: #F08300;
       width: 47%;
     }
   }
@@ -377,7 +377,7 @@
       position: absolute;
       padding: 14px 30px;
       bottom: -39px;
-      background: #E16010;
+      background: #F08300;
       box-sizing: border-box;
       left: 22%;
       width: 19%;
@@ -394,7 +394,7 @@
       height: 19px;
       right: 0;
       top: -19px;
-      background: #E16010;
+      background: #F08300;
     }
     &--info {
       position: absolute;
@@ -426,7 +426,7 @@
       height: calc(100% + 20px);
       left: 0;
       top: -20px;
-      background: #E16010;
+      background: #F08300;
     }
   }
   &__watercourse {
@@ -465,7 +465,7 @@
       height: 160px;
       right: 6%;
       bottom: -145%;
-      background: #E16010;
+      background: #F08300;
     }
     &--box {
       width: 48%;
@@ -484,7 +484,7 @@
         height: 14px;
         left: 51px;
         top: 0;
-        background: #E16010;
+        background: #F08300;
       }
       &:after {
         content: "";
@@ -498,7 +498,7 @@
     }
     &--info {
       position: absolute;
-      background: #E16010;
+      background: #F08300;
       padding: 14px 16px 14px 37px;
       box-sizing: border-box;
       left: 4px;
@@ -538,7 +538,7 @@
         height: 15px;
         left: 13%;
         bottom: -10px;
-        background: #E16010;
+        background: #F08300;
       }
     }
     &--info {
@@ -547,7 +547,7 @@
       box-sizing: border-box;
       left: 100%;
       bottom: -25px;
-      background: #E16010;
+      background: #F08300;
       width: 57%;
     }
     &--box {
@@ -600,7 +600,7 @@
       font-size: 100px;
       line-height: 75px;
       text-transform: uppercase;
-      color: #E16010;
+      color: #F08300;
       margin-right: 44px;
     }
     &--right {
@@ -626,7 +626,7 @@
         height: 14px;
         left: 38%;
         bottom: -14px;
-        background: #E16010;
+        background: #F08300;
       }
     }
     &--info {
@@ -690,7 +690,7 @@
 }
 
 .contemporary .contemporary__dots li.slick-active button {
-  background: #E16010;
+  background: #F08300;
 }
 
 .contemporary .contemporary__data {
