--- a/style/less/seventy.less
+++ b/style/less/seventy.less
@@ -37,7 +37,7 @@
         height: 47px;
         left: -12px;
         top: 0;
-        background: #E16010;
+        background: #F08300;
       }
     }
   }
@@ -95,7 +95,7 @@
         height: 8px;
         left: 0;
         bottom: -8px;
-        background: #E16010;
+        background: #F08300;
       }
     }
     &--info {
@@ -104,7 +104,7 @@
       top: 57%;
       width: 28%;
       text-align: right;
-      background: #E16010;
+      background: #F08300;
       padding: 15px 25px;
       box-sizing: border-box;
     }
@@ -129,7 +129,7 @@
         height: 10px;
         left: -6%;
         bottom: -10px;
-        background: #E16010;
+        background: #F08300;
       }
       &:before {
         content: "";
@@ -147,7 +147,7 @@
       left: 0;
       padding: 13px;
       box-sizing: border-box;
-      background: #E16010;
+      background: #F08300;
       width: 42%;
     }
   }
@@ -208,7 +208,7 @@
       left: -7px;
       width: 7px;
       height: 100%;
-      background: #E16010;
+      background: #F08300;
     }
     &--text {
       margin: 25px 0 0 18px;
@@ -260,7 +260,7 @@
       position: absolute;
       right: 0;
       top: 53%;
-      background: #E16010;
+      background: #F08300;
       padding: 14px 50px;
       width: 37%;
       box-sizing: border-box;
@@ -315,7 +315,7 @@
       left: 0;
       width: 223px;
       height: 13px;
-      background: #E16010;
+      background: #F08300;
     }
     &--info {
       position: absolute;
