--- a/style/less/sixty.less
+++ b/style/less/sixty.less
@@ -10,7 +10,7 @@
       height: 17px;
       left: 0;
       bottom: -60px;
-      background: #E16010;
+      background: #F08300;
     }
     &:before {
       content: "";
@@ -68,7 +68,7 @@
         position: absolute;
         width: 100%;
         left: 0;
-        background: #E16010;
+        background: #F08300;
         height: 9px;
         top: -9px;
       }
@@ -77,7 +77,7 @@
         position: absolute;
         width: 100%;
         left: 0;
-        background: #E16010;
+        background: #F08300;
         height: 9px;
         bottom: -9px;
       }
@@ -102,7 +102,7 @@
       left: 31%;
       bottom: -175px;
       z-index: -1;
-      background: #E16010;
+      background: #F08300;
     }
   }
   &__styling {
@@ -116,7 +116,7 @@
       left: 0;
       top: -10px;
 
-      background: #E16010;
+      background: #F08300;
     }
     &--info {
       position: absolute;
@@ -140,7 +140,7 @@
       background: #005C93;
     }
     &--info {
-      background: #E16010;
+      background: #F08300;
       position: absolute;
       bottom: 34px;
       left: -60px;
