--- a/style/less/eighty.less
+++ b/style/less/eighty.less
@@ -17,7 +17,7 @@
         height: 14px;
         right: -144px;
         bottom: -14px;
-        background: #E16010;
+        background: #F08300;
       }
     }
     &--heading {
@@ -70,7 +70,7 @@
     &--wrap {
       width: 100%;
       height: 164px;
-      background: #E16010;
+      background: #F08300;
     }
     &--image {
       display: block;
@@ -79,12 +79,13 @@
   }
   &__building {
     justify-content: space-around;
+    margin-bottom: 113px;
     &--box {
       width: 78%;
     }
     &--wrap {
       position: relative;
-      margin-bottom: 38px;
+      margin-bottom: 73px;
       &::after {
         content: "";
         position: absolute;
@@ -92,7 +93,7 @@
         height: 12px;
         left: 8%;
         bottom: -10px;
-        background: #E16010;
+        background: #F08300;
       }
       &:before {
         content: "";
@@ -104,6 +105,11 @@
         background: #005C93;
       }
     }
+    &--text {
+      width: 60%;
+      margin: 0 auto;
+      align-items: flex-start;
+    }
     &--info {
       position: absolute;
       background: #005C93;
@@ -112,15 +118,6 @@
       width: 26%;
       padding: 7px 13px;
       box-sizing: border-box;
-    }
-    &--name {
-      font-family: "Rodchenko", sans-serif;
-      font-style: normal;
-      font-weight: normal;
-      font-size: 50px;
-      line-height: 120%;
-      color: #000000;
-      margin-left: 8%;
     }
   }
   &__way {
@@ -139,7 +136,7 @@
     &--info {
       position: absolute;
       left: 0;
-      background: #E16010;
+      background: #F08300;
       padding: 10px 18px;
       box-sizing: border-box;
       bottom: 12%;
@@ -170,7 +167,7 @@
         left: -9%;
         bottom: 35%;
         z-index: -1;
-        background: #E16010;
+        background: #F08300;
       }
 
     }
@@ -199,7 +196,7 @@
       height: 16px;
       left: 0;
       bottom: -10px;
-      background: #E16010;
+      background: #F08300;
     }
     &--info {
       padding: 16px 26px;
@@ -224,7 +221,7 @@
       position: absolute;
       padding: 8px 10px;
       box-sizing: border-box;
-      background: #E16010;
+      background: #F08300;
       right: -5%;
       top: 77%;
       text-align: right;
@@ -256,14 +253,6 @@
 .eighty .eighty__exploitation--data:before {
   left: auto;
   right: -19px;
-}
-
-.eighty .eighty__data {
-  font-size: 80px;
-}
-
-.eighty .eighty__data:before {
-  display: none;
 }
 
 .eighty .eighty__way--text {
@@ -371,7 +360,7 @@
   }
 
   .eighty__building--box {
-    width: 79%;
+    width: 100%;
   }
 
   .eighty__way--info {
@@ -415,6 +404,12 @@
 
 @media screen and (max-width: 768px) {
   .eighty .eighty__installations {
+    flex-direction: column;
+  }
+
+  .eighty .eighty__building--text {
+    width: 80%;
+    margin: 0;
     flex-direction: column;
   }
 
@@ -563,13 +558,18 @@
     margin-bottom: 80px;
     padding: 0 5px;
   }
+  .eighty .eighty__building--text {
+    width: 97%;
+  }
 
   .eighty__installations--text {
     width: 97%;
   }
+
   .eighty__station--text {
     margin-bottom: 5px;
   }
+
   .eighty__exploitation--text {
     width: 97%;
   }
