editing modal video

--- a/style/less/contemporary.less
+++ b/style/less/contemporary.less
@@ -161,12 +161,12 @@
     margin: 0 auto 113px;
     justify-content: space-between;
     &--info {
-      width: 47%;
+      width: 49%;
     }
   }
   &__robot {
     width: 76%;
-    margin: 0 auto 189px;
+    margin: 0 auto 87px;
     &--data {
       font-family: "Rodchenko", sans-serif;
       font-style: normal;
@@ -218,6 +218,10 @@
       width: 40%;
       margin-left: 6%;
     }
+    &--block{
+      display: block;
+      margin-bottom: 25px;
+  }
     &--wrap {
       position: absolute;
       top: -313px;
@@ -328,12 +332,6 @@
   &__eastern {
     position: relative;
     margin-bottom: 74px;
-    &--text {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 28%;
-    }
     &--wrap {
       position: relative;
       &:after {
