--- a/style/less/style.less
+++ b/style/less/style.less
@@ -1151,6 +1151,9 @@ body {
     width: 80%;
     height: 34%;
   }
+  .header__film--close {
+    top: 34%;
+  }
 }
 
 @media screen and (max-width: 990px) {
