--- a/style/less/style.less
+++ b/style/less/style.less
@@ -858,6 +858,10 @@ body {
       color: #000000;
       width: 89%;
     }
+    &--block{
+      display: block;
+      margin-top: 25px;
+    }
   }
 }
 
